@@ -1,6 +1,7 @@
 ggplot2 0.8.4  (2008-XX-XX)
 ----------------------------------------
 
+* scale_discrete_position now uses drop argument to force dropping of unnused levels
 * scale_gradient now uses labels parameters, if supplied
 * geom_path correctly switches to segments if varying alpha used (thanks to  Karl Ove Hufthammer for the report and Baptiste Auguie for the fix)
 * always sort input to geom_ribbon
